[package]
name = "rusty_api"
version = "0.1.0"
authors = ["Giv Kaf"]
edition = "2018"

[dependencies]
rand = "0.6.4"
nickel = "*"
mongodb = "0.3.12"
bson = "0.13.0"
rustc-serialize = "*"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "0.9"
serde_xml = "0.9"
serde_json = "1.0"
jwt = "*"
hyper = "*"
rust-crypto = "*"